[package]
name = "nustify"
version = "0.2.0"
authors = ["Scotow <contact@scotow.com>"]
edition = "2018"
keywords = ["notification", "ifttt", "ios", "android", "imgur"]

[features]
imgur = ["reqwest/multipart"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
nustify = { path = ".", features = ["imgur"] }
tokio = { version = "1.2", features = ["macros"] }