[package]
name = "nustify"
version = "0.2.1"
edition = "2018"
authors = ["Scotow <contact@scotow.com>"]
license = "MIT"
homepage = "https://github.com/scotow/nustify"
description = "Send iOS/Android Notifications using IFTTT's Webhook"
keywords = ["notification", "ifttt", "ios", "android", "imgur"]

[features]
imgur = ["reqwest/multipart"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
nustify = { path = ".", features = ["imgur"] }
tokio = { version = "1.2", features = ["macros"] }